# mincopter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake.command  compile-all.sh  config.mk  mc-config.cmake  runboth.sh  setup_gz.sh  upload.sh
ArduCopter/: ArduCopter.pde  STATE.md  ap_union.h  arducopter.cpp  arming.cpp  attitude.cpp  attitude.h  btree.cpp  commands.cpp  commands.h  compat.h  config.h  config_channels.h  control_modes.cpp  control_modes.h  events.cpp  events.h  failsafe.cpp  failsafe.h  fence.cpp  fence.h  init.cpp  log.cpp  log.h  mcinstance.cpp  mcinstance.h  mcstate.cpp  mcstate.h  menu.cpp  motors.cpp  motors.h  navigation.cpp  navigation.h  out.txt  parameters.cpp  parameters.h  profiler.h  radio.cpp  radio.h  read.md  (+12 more)
ap-gz/: CMakeLists.txt  README.md
ap-gz/include/: ArduPilotPlugin.hh
ap-gz/src/: ArduPilotPlugin.cc
ap-gz/worlds/: iris_runway.sdf  test_imu_gyro.sdf  test_iris.sdf
arch/AP_HAL/: AP_HAL.h  HAL.h  (+16 more)
control/: AC_Fence.cpp  AC_PID.cpp  AC_WPNav.cpp  CMakeLists.txt  arming.cpp  arming.cppe  controller_csc.cpp  controller_lqr.cpp  controller_mpc.cpp  controller_mpc_constructor.cpp  controller_none.cpp  controller_pid.cpp  failsafe.cpp  mixer.cpp  planner_none.cpp  planner_waypoint.cpp  radio.cpp
control/controllers/: controller_pid.cpp  controller_pid.h
control/design/: README.md
control/design/src/: casadi_test.py  cascaded-pid.ipynb  cascaded.ipynb  dim1-vertmodel.ipynb  dynamic-model.ipynb  ekf-derivation.ipynb  ekf_correct.c  ekf_predict.c  kt_calc.py  lqr.ipynb  main.py  rotations.ipynb  symb.py  workingmpc.ipynb  workspace.ipynb
control/design/src/RapidQuadrocopterTrajectories/: MixerSolution.ipynb  combined-osqp.ipynb  combined.ipynb  combined2.ipynb  fulltest.ipynb  mpc_full.py  osqp-example.ipynb  trajectory_test.ipynb
control/design/src/RapidQuadrocopterTrajectories/cgen/: CMakeLists.txt  Makefile  emosqp  emosqp.c  osqp_configure.h  workspace.c  workspace.h
control/include/controllers/: control.h  controller_csc.h  controller_lqr.h  controller_mpc.h  controller_none.h  controller_pid.h  mixer.h
control/include/controllers/AC_PID/: AC_PID.h
control/include/planners/: failsafe.h  planner.h  planner_interface.h  planner_none.h  planner_waypoint.h  radio.h
control/include/planners/AC_Fence/: AC_Fence.h
control/include/planners/AC_WPNav/: AC_WPNav.h
control/planners/: README.md  btree.cpp  control_modes.cpp  control_modes.h  failsafe.cpp  failsafe.h  planner.h  planner_waypoint.cpp  planner_waypoint.h  radio.cpp
control/planners/AC_WPNav/: AC_WPNav.h
debug/: loadconfig.gdb  run.sh
dev/: CMakeLists.txt
dev/AP_ADC/: AP_ADC.h  AP_ADC_ADS7844.cpp  AP_ADC_HIL.cpp  AP_ADC_None.cpp  AP_ADC_None.h  sim_adc.h
dev/AP_Baro/: AP_Baro.cpp  AP_Baro.h  AP_Baro_BME280.cpp  AP_Baro_BME280.h  AP_Baro_BMP085.cpp  AP_Baro_BMP085.h  AP_Baro_MS5611.cpp  AP_Baro_None.h  sim_barometer.cpp  sim_barometer.h
dev/AP_BattMonitor/: AP_BattMonitor.h
dev/AP_Compass/: AP_Compass.h  AP_Compass_HMC5843.cpp  AP_Compass_ICM20948.cpp  AP_Compass_ICM20948.h  AP_Compass_None.h  AP_Compass_PX4.cpp  Compass.cpp  Compass.h  sim_compass.cpp  sim_compass.h
dev/AP_GPS/: AP_GPS.h  AP_GPS_Auto.cpp  AP_GPS_Glitch.cpp  AP_GPS_Glitch.h  AP_GPS_MTK.h  AP_GPS_SIRF.h  AP_GPS_UBLOX.cpp  GPS.cpp  GPS.h  sim_gps.cpp
dev/AP_InertialSensor/: AP_InertialSensor.cpp  AP_InertialSensor.h  AP_InertialSensor_L3G4200D.cpp  AP_InertialSensor_MPU6000.cpp  AP_InertialSensor_MPU6000.h  AP_InertialSensor_MPU6050.cpp  AP_InertialSensor_MPU6050.h  AP_InertialSensor_None.h  AP_InertialSensor_Oilpan.cpp  sim_inertialsensor.cpp  sim_inertialsensor.h
dev/AP_Motors/: AP_Motors.h  AP_MotorsMatrix.cpp  AP_MotorsTri.cpp  AP_Motors_Class.cpp  AP_Motors_Class.h
dev/AP_Notify/: AP_BoardLED.h  AP_Notify.cpp  AP_Notify.h  Buzzer.h  ExternalLED.h
dev/DataFlash/: DataFlash.h  DataFlash_APM2.cpp  DataFlash_File.cpp  DataFlash_File.h  DataFlash_SITL.cpp  DataFlash_SITL.h  LogFile.cpp
docs/: README.template.md  arch.md  bin_analysis.md  breaks.gdb  gps.md  issues.md  perf.md  sensors.md  upload.md
lib/: CMakeLists.txt  log.cpp  serial.cpp  serial.h  util.cpp  util.h
lib/AP_Curve/: AP_Curve.h
lib/AP_Math/: AP_Math.h
lib/AP_Menu/: AP_Menu.cpp
lib/RC_Channel/: RC_Channel.h  RC_Channel_aux.h
mincopter/: config.h  init.cpp  init.h  mcinstance.cpp  mcinstance.h  mincopter.cpp
mk/: board_avr.mk  environ.mk
sim/: CMakeLists.txt  README.md  SimulationDebug.ipynb  Untitled.ipynb  gz_interface.cpp  gz_interface.h  log_streamer.py  sim_adc.cpp  sim_barometer.cpp  sim_barometer.h  sim_compass.cpp  sim_compass.h  sim_gps.cpp  sim_gps.h  sim_inertialsensor.cpp  sim_inertialsensor.h  simulation_logger.cpp  simulation_logger.h
state/: CMakeLists.txt  mcstate.cpp  mcstate.h  mcstate_state.h  read.md  readme.md
state/AP_AHRS/: AHRS_sim.cpp  AHRS_sim.h  AP_AHRS.cpp  AP_AHRS.h  AP_AHRS_DCM.cpp  ahrs.h  ahrs_complementary.cpp  ahrs_complementary.h  ahrs_dcm.cpp  ahrs_dcm.h  ahrs_interface.cpp  ahrs_interface.h  ahrs_none.cpp  ahrs_none.h  ahrs_sim.cpp  ahrs_sim.h
state/AP_InertialNav/: AP_InertialNav.cpp  AP_InertialNav.h  inav.h  inav_default.cpp  inav_default.h  inav_interface.cpp  inav_interface.h  inav_none.cpp  inav_none.h  inav_sim.cpp  inav_sim.h
state/design/: complementary-derivation.ipynb  main.py  screenlog.0  test.py
state/ekf/: ekf.cpp  ekf.h  ekf_correct.c  ekf_correct_manual.c  ekf_correct_mx.c  ekf_predict.c  ekf_predict_mx.c
test/: CMakeLists.txt  README.md
test/hal/: CMakeLists.txt  test_hal_core.cpp
test/integration/state/: CMakeLists.txt  test_sensor_compensation.cpp  test_state_complementary.cpp  test_state_core.cpp
test/unit/barometer/: CMakeLists.txt  test_barometer_core.cpp
test/unit/compass/: CMakeLists.txt  test_compass_core.cpp
test/unit/gps/: CMakeLists.txt  test_gps_core.cpp
test/unit/imu/: CMakeLists.txt  test_imu_core.cpp
test/unit/motors/: CMakeLists.txt  test_motor_sim_core.cpp
testing/: breaks.gdb  mc_console.py  menuserial.py  oldserial.py  readserial.py
toolchains/: avr.cmake  rpi.cmake  stm32.cmake  x86_64.cmake
(+263 files in other folders)
