
# NOTE the motors currently only contains the sim one which should be conditionally compiled

##add_subdirectory(unit/motors)
#add_subdirectory(unit/barometer)
#add_subdirectory(unit/imu)
#add_subdirectory(unit/compass)
#add_subdirectory(unit/gps)

#add_subdirectory(integration/state)

add_subdirectory(hal)



